modified cloud build to include plan, manual approval, apply and an option for logging

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,41 @@ steps:
     - | 
         terraform init 
   - timeout: "600s"
+
+  - id: 'tf plan'
+    name: 'hashicorp/terraform:1.0.0'
+    depends on: tf plan
+    entrypoint: 'sh'
+    args:
+      - "-c"
+      - |
+          terraform plan
+  - timeout: "600s"
+
+  # Require Manual Approval
+  - id: 'gcloud approval'
+    name: 'gcr.io/cloud-builders/gcloud'
+    depends on: tf plan
+    entrypoint: 'sh'
+    args:
+      - "-c"
+      - |
+        # Notify a user or group about the Terraform changes and request approval.
+        # Replace 'user@example.com' with the email of the approver.
+        gcloud builds submit --config=cloudbuild-manual-approval.yaml --no-source --substitutions=_APPROVER_EMAIL=aiffone@gmail.com
+  - timeout: "600s"
+
+
+  - id: 'tf apply'
+    name: 'hashicorp/terraform:1.0.0'
+    depends on: gcloud approval
+    entrypoint: 'sh'
+    args:
+      - "-c"
+      - |
+          terraform apply -auto-approve
+  - timeout: "600s"
+
+
+options:
+  logging: CLOUD_LOGGING_ONLY
