changed depends on to waitFor to enable apply run after manual approval

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,8 @@ steps:
 
   - id: 'tf apply'
     name: 'hashicorp/terraform:1.0.0'
-    depends on: gcloud approval
+    waitFor:
+      - "gcloud approval"
     entrypoint: 'sh'
     args:
       - "-c"
