--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
     args: 
     - '-c'
     - | 
-        terraform init 
+        terraform init -backend-config="bucket=$_TF_STATE_BUCKET_NAME" -backend-config="prefix=terraform/state"
   # - timeout: "600s"
 
   - id: 'tf-plan'
@@ -18,7 +18,9 @@ steps:
       - 'pwd'
       - 'ls -la'
       - |
-          terraform plan
+          terraform plan \
+          -var="project-id=$PROJECT_ID" \
+          -out=PLAN
   # - timeout: "600s"
 
   - id: 'tf-apply'
@@ -27,7 +29,7 @@ steps:
     args:
       - "-c"
       - |
-          terraform apply -auto-approve
+          terraform apply PLAN --auto-approve
   # - timeout: "600s"
 
 
