--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,27 +1,26 @@
 pipeline {
     agent any
     environment {
-        PROJECT_ID = 
-        TF_STATE_BUCKET_NAME = 
+                PROJECT_ID = "marketplacedev-416018"
+                TF_STATE_BUCKET_NAME = "marketplacedev-bucket"
     }
-    stages{
-        stage('terraform init') {
-            steps{
-                script{
-                    sh "terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="prefix=terraform/state""
-                }
-            }
-        }
-        stage('terraform apply') {
-            steps{
-                script{
-                    sh "terraform plan --auto-approve -var="project-id=$PROJECT_ID""
+    stages {
+        stage('terraform init and apply') {
+            steps {
+                script {
+                    withCredentials([file(credentialsId: 'GOOGLE_AUTH', variable: 'GOOGLE_APPLICATION_CREDENTIALS')]) {
+                        sh """
+                        export GOOGLE_APPLICATION_CREDENTIALS=${GOOGLE_APPLICATION_CREDENTIALS}
+                        terraform init -backend-config="bucket=${TF_STATE_BUCKET_NAME}" -backend-config="prefix=terraform/state"
+                        terraform apply --auto-approve -var="project-id=${PROJECT_ID}"
+                        """
+                    }
                 }
             }
         }
         stage('terraform action') {
-            steps{
-                script{
+            steps {
+                script {
                     echo "Terraform action is -> ${action}"
                     sh "terraform ${action} --auto-approve"
                 }
